--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -4,10 +4,10 @@
 	
 	
     <string-array name="matrix_options">
-    <item>Seeed 16x32 V1</item>
+    <item>PIXEL 16x32 V1</item>
     <item>Adafruit 16x32</item>
-    <item>Seeed 32x32 V1</item>
-    <item>Seeed 32x32 V2</item>
+    <item>PIXEL 32x32 V1</item>
+    <item>PIXEL 32x32 V2</item>
 	</string-array>
 	
 <string-array name="matrix_values">
@@ -18,7 +18,7 @@
 </string-array>
 
   <string-array name="FPSOverride_options">
-    <item>Default</item>
+    <item>Old Device</item>
     <item>5</item>
     <item>10</item>
     <item>15</item>
